<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/percent"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/percent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zero"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/period"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percent" />

    <Button
        android:id="@+id/period"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/period"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero" />

    <Button
        android:id="@+id/one"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/one"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/percent"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/two"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/two"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/zero"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one" />

    <Button
        android:id="@+id/three"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/three"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/period"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two" />

    <Button
        android:id="@+id/equals"
        android:layout_width="80dp"
        android:layout_height="160dp"
        android:text="@string/equals"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/period" />

    <Button
        android:id="@+id/four"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/four"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/five"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/five"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four" />

    <Button
        android:id="@+id/six"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/six"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/three"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five" />

    <Button
        android:id="@+id/seven"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/seven"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eight"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/eight"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven" />

    <Button
        android:id="@+id/nine"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/nine"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/six"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight" />


    <Button
        android:id="@+id/plus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/plus"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six" />

    <Button
        android:id="@+id/minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/minus"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine" />

    <Button
        android:id="@+id/clear"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/clear"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/seven"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/multiply"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/eight"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear" />

    <Button
        android:id="@+id/divide"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/divide"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/nine"
        app:layout_constraintEnd_toStartOf="@+id/backspace"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiply" />

    <Button
        android:id="@+id/backspace"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/backspace"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divide" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/upperGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="clear,multiply,divide,backspace,minus,nine,eight,seven" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/lowerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="equals,three,period,zero,two,one,percent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/middleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="four,five,six,plus" />


</androidx.constraintlayout.widget.ConstraintLayout>